*Empty MediaWiki Message*

--- a/མན་ཅི་ཀེའི་ར་རི་རྒྱུད་.mw
+++ b/མན་ཅི་ཀེའི་ར་རི་རྒྱུད་.mw
@@ -1,80 +1,1 @@
-[[file:Marins2.JPG|300px|right]]
-'''མན་ཅི་ཀེའི་ར་རི་རྒྱུད་'''''(པོར་ཅུ་གལ་ཁ་:Serra da Mantiqueira)''[[བྲ་ཛིལ་]]
-གྱི་[[རི་རྒྱུད་]]ཅིག་ཨིན།ཤར་ལྷོ་ལུང་སཕྱོགས་ནང་[[ཨཊ་ལན་ཊིཀ་རྒྱ་མཚོ་]]ཉེ་དབང་གི་[[སན་པའུ་ལོ་]][[མི་ནས་ཞེ་རའིས་]]དང་[[རིའོ་དེ་ཞ་ནེའི་རོ་]]རྒྱལ་ཁབ་ཀྱི་ས་མཚམས་ས་ཆ་ནང་འདུག༎རྩེ་མཐོ་ཤོས་དེ་༢༧༩༧mམཐོ་ཚེད་འདུག་༼[[པེ་དྲ་ད་མི་ན་རྩེ་]]༽འབདཝ་ལས་རི་དེ་དང་རི་གཞན་གངས་རི་ཅིག་མེན།།
-
-==== རྩེ་ཚུ་དེ། ====
-[[པེ་དྲ་ད་མི་ན་རྩེ་]](Pedra da Mina) 2797m<br>
-[[ཨ་གུ་ལྷས་ནེ་གྲས་རྩེ་]](Pico Agulhas Negras) 2792m<br>
-[[མ་རིནས་རྩེ་]](Pico do Marins) 2422m<br>
-[[ག་ཧ་ཕཾའུ་རྩེ་]](Pico Garrafão) 2359m<br>
-[[པ་པ་ག་ཡོ་རྩེ་]](Pico Papagaio) 2250m<br>
-[[པེ་དྲ་དོ་ཀམ་པེས་ཏྲེ་རྩེ་]](Pedra do Campestre) 2120m<br>
-[[སེ་ལ་དོ་རྩེ་]](Pico Selado) 2083m<br>
-[[པེ་དྲ་དེ་སཾའུ་དོ་མིན་གོས་]](Pedra de São Domingos) 2050m<br>
-[[ཨི་ཏ་པེ་བ༹་རྩེ་]](Pico Itapeva) 2030m<br>
-[[ཨ་གུ་དོས་རྩེ་]](Pico Agudos) 1640m<br>
-<gallery>
-file:Pedra da Mina.jpg|པེ་དྲ་ད་མི་ན་རྩེ།མན་ཅི་ཀེའི་ར་རི་རྒྱུ་གྱི་མཐོ་ཤོས་
-file:Agulhasnegras.JPG|ཨ་གུ་ལྷས་ནེ་གྲས་རྩེ་
-File:Marins.JPG|མ་རིནས་རྩེ་
-File:Pico do Papagaio.png|པ་པ་ག་ཡོ་རྩེ་
-File:Pedra São Domingos.jpg|པེ་དྲ་དེ་སཾའུ་དོ་མིན་གོས་
-</gallery>
-==== གྲོང་སྡེ་ཚུ་དེ། ====
-===== མཐོཝ་ཤོས་ཚུ་དེ། =====
-[[ཀམ་པོས་དོ་ཞོར་དཾའུ་]](Campos do Jordão) 1628m<br>
-[[མོན་ཏེ་བེར་དེ་]](Monte Verde) 1555m<br>
-[[སེ་ན་དོར་ཨ་མ་རལ་]](Senador Amaral) 1505m<br>
-[[བོམ་ཧེ་པོའུ་ཟོ་]](Bom Repouso) 1360m<br>
-[[གོན་སལ་བེས་]](Gonçalves) 1350m<br>
-[[མར་མེ་ལོ་པོ་ལིས་]](Marmelópolis) 1277m<br>
-[[མ་རིའ་ད་ཕེ་]](Maria da Fé) 1258m<br>
-[[བོམ་ཞར་ཇིམ་དེ་མི་ནས་]](Bom Jardim de Minas) 1250m<br>
-[[མུ་ཉོཟ་]](Munhoz) 1235m<br>
-[[བོ་ཀ་ཨི་ན་དེ་མི་ནས་]](Bocaína de Minas) 1210m<br>
-[[དེལ་ཕིམ་མོ་རེའི་ར་]](Delfim Moreira) 1207m<br>
-[[བུ་ཨེ་ནོ་བྲན་དཾཨུ་]](Bueno Brandão) 1204m<br>
-[[ཨི་པུའི་ཨུ་ན་]](Ipuiúna) 1201m<br>
-[[པོ་སོས་དེ་ཀལ་དས་]](Poços de Caldas) 1198m<br>
-<gallery>
-File:Campos do Jordão.jpg|ཀམ་པོས་དོ་ཞོར་དཾའུ།མན་ཅི་ཀེའི་ར་རི་རྒྱུད་དང་བྲ་ཛིལ་གྱི་གྲོང་སྡེ་མཐོ་ཤོས།
-</gallery>
-
-===== སྦོམ་ཤོས་ཚུ་དེ། =====
-[[པོ་སོས་དེ་ཀལ་དས་]](Poços de Caldas) 161000 hab(2013)<br>
-[[བྲ་གན་ས་པའུ་ལིས་ཏ་]](Bragança Paulista) 157000 hab(2013)<br>
-[[པོའུ་ཟོ་ཨ་ལེ་གྲེ་]](Pouso Alegre) 140000 hab(2013)<br>
-[[བྷར་བྷ་སེ་ན་]](Barbacena) 133000 hab(2013)<br>
-[[ཨི་ཏ་ཞུ་བ་]](Itajubá) 94900 hab(2013)<br>
-[[ཀམ་པོས་དོ་ཞོར་དཾའུ་]](Campos do Jordão) 47800 hab(2010)<br>
-[[སཾའུ་ལོའུརེན་སོ]](São Lourenço) 42300 hab(2013)<br>
-[[སན་ཏ་རི་ཏ་དོ་ས་པུ་ཀ་ཨི་]](Santa Rita do Sapucaí) 40780 hab(2012)<br>
-<gallery>
-file:Poços de caldas1.JPG|པོ་སོས་དེ་ཀལ་དས།མན་ཅི་ཀེའི་ར་རི་རྒྱུ་དང་ལྷོ་མི་ནས་ཞེ་རའིས་རྒྱལ་ཁབ་གྱི་གྲོང་སྡེ་སྦོམ་ཤོས་
-file:Lagodotabo o.jpg|བྲ་གན་ས་པའུ་ལིས་ཏ་
-file:P.A. City.jpg|པོའུ་ཟོ་ཨ་ལེ་གྲེ་
-file:Escola Agrotécnica Federal.jpg|བྷར་བྷ་སེ་ན་
-file:Itajuba-slideshow-01.jpg|ཨི་ཏ་ཞུ་བ་
-</gallery>
-
-== See Also ==
-*[[རྒྱ་མཚོའི་རི་རྒྱུད།༼བྲ་ཛིལ་༽]]
-*[[བྲ་ཛིལ་གྱི་ས་ཁ་མཐོ་ས།]]
-*[[མི་ནས་ཞེ་རའིས།]]
-*[[པ་ར་ཨི་བ་ལུང་གཤོང།༼བྲ་ཛིལ་༽]]
-
-== External links ==
-*[http://www.altamontanha.com/iviturui/mantiqueira01.html མན་ཅི་ཀེའི་རའི་སློབ་དེབ་དང་གློག་བརྙན།༼པོར་ཐུ་གལ་ཁ༽]
-*[http://www.terrasdamantiqueira.com/serradamantiqueira.htm མན་ཅི་ཀེའི་རའི་གནས་ཚུལ།༼པོར་ཐུ་གལ་ཁ༽]
-
-
-
-
-
-
-{{translate}}
-
-
-
-[[Category:འཛམ་གླིང་རྒྱས་བཤད]]
-[[Category:བཱརཱ་ཛིལ་]]
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
