*Empty MediaWiki Message*

--- a/ལྷ་ས་.mw
+++ b/ལྷ་ས་.mw
@@ -1,68 +1,1 @@
-[[File:པོ་ཏ་ལ།_༢_.JPG|right|thumb|300px|པོ་ཏ་ལ།]]
-[[File:Lhasa.png|right|300px|]]
-
-'''ལྷ་ས'''་ནི་། བོད་ཀྱི་ལྟེ་གནས་གྲོང་ཁྱེར་ཡིན་ལ། [[བོད་རྒྱལ་སྲོང་བཙན]]་རྒྱལ་པོའི་དུས་ལ་[[དམར་པོ་རི]]འི་རྩེ་ལ་བརྩིགས་པ་རེད། འདི་ནི་བོད་ཀྱི་ཆབ་སྲིད་དང་། དཔལ་འབྱོར། རིག་གནས་ཀྱི་ལྟེ་གནས་ཡིན། སྔོ་ལྗང་ཅན་གྱི་ལྷ་ས་སྐྱིད་ཆུ་ནི་[[གཉན་ཆེན་ཐང་ལྷ]]འི་གངས་འཁྱག་བཞུ་བའི་ཆབ་རྒྱུན་ཡིན་ཞིང་དེ་ཉིད་ནགས་ཚལ་སྟུག་པའི་གྲོག་རོང་དང་། མུ་མཐའ་མེད་པའི་བྱང་ཐང་བརྒྱུད་དེ་ཆུ་ཤུར་ནས་[[ཡར་ཀླུང་གཙང་པོ]]་དང་འདྲེས་ཀྱི་ཡོད། གནའ་བོའི་གྲོང་ཁྱེར་ལྷ་ས་ནི་གཡུ་ལྟར་སྔོ་བའི་ཆུ་མོ་འདིའི་འགྲམ་དུ་མཆིས།
-
-== ཁོར་ཡུག ==
-[[གྲོང་ཁྱེར]]་དེའི་ཡུལ་གྱི་དགེ་མཚན་ནི་ལྷོ་ཕྱོགས་སུ་ལྷ་སའི་[[སྐྱིད་ཆུ]]་ཡན་ལག་བརྒྱད་ལྡན་གྱི་གཙང་ཆུ་གཡས་སུ་འཁོར་ཞིང་རྒྱུགས་པ་དང་། ཤར་ན་ཇོ་མོ་ཟེ་ཟེ། བྱང་ཤར་དུ་སྨིན་དྲུག་རྫ་རི། ཤར་ལྷོར་ཆོས་རྒྱལ་བླ་རིའམ་བུམ་པ་རི། ནུབ་བྱང་དུ་དགེ་འཕེལ་རི་སོགས་ཀྱིས་བསྐོར་ཡོད།
-== མགྲོན་ཁང་། ==
-== ལྗོངས་རྒྱུ། ==
-== ནམ་ཟླ། ==
-
-[[File:ལྷ་ས།.JPG|right|thumb|300px|ལྷ་ས།]]
-
-ནམ་ཟླ་དུས་བཞིར་ཉི་འོད་འཕྲོ་ཤུགས་ཤིན་ཏུ་ཆེ་བ་དང་། ལོ་འཁོར་གཅིག་ནང་ཉི་འོད་འཕྲོད་ཚད་ཆུ་ཚོད་༣༠༠༠ཙམ་ཟིན་གྱི་ཡོད། གྲོང་ཁྱེར་དེའི་ས་ནང་བབ་ཀྱི་མཐོ་ཚད་རྒྱ་མཚོའི་ངོས་ལས་སྤྱི་ཁྲི་༣༦༥༠ཙམ་ཟིན་ཡོད་པ་དང་མཁའ་རླུང་ཤིན་ཏུ་གཙང་བ་མ་ཟད། དབྱར་དུས་ཆར་ཆུ་འབབ་ཚད་སྙོམ་པ། ལོ་རེའི་ཧོར་ཟླ་༧、༨、༩གསུམ་གྱི་ནང་ཆར་ཆུ་འབབ་ཚད་ཆ་སྙོམས་ལྟར་ན་ཧའོ་རྨིད་༤༥༠ཙམ་དང་། ལོ་རེའི་ཆ་སྙོམས་དྲོད་ཚད་ནི་དྲོད་ཚད་ཨང་གྲངས་༨ཡས་མས་ཡིན། དབྱར་དཀྱིལ་དྲོད་ཚད་མཐོ་ཤོས་ལ་དྲོད་ཚད་ཨང་གྲངས་༢༩ཙམ་ཡོད།
-
-== དུས་ཆེན། ==
-ཧོར་ཟླ་བདུན་པའི་ནང་སྔར་སྲོལ་དུས་སྟོན་འབྲས་སྤུངས་ཞོ་སྟོན་སྐབས་ནོར་བུ་གླིང་ག་དང་། རྫོང་རྒྱབ་ཀླུ་ཁང་སོགས་སུ་ལྷ་མོ་འཁྲབ་པ་དང་། གཞན་ཡང་དུས་དེ་ནི་རྒྱལ་ཁབ་ཕྱི་ནང་ནས་ཕེབས་པའི་ཡུལ་འཁོར་སྤྲོ་འཆམ་པ་དང་། གནས་མཇལ་བ། འཚོང་གཉེར་བ།རིག་གནས་སློབ་གསོའི་ལས་གཉེར་བ་སོགས་ཕྱོགས་མང་པོའི་མཐུན་གྲོགས་མཉམ་འཛོམས་ཐོག་དགའ་སྤྲོའི་ངང་ནས་གྲོང་ཁྱེར་དེ་ཡི་འབྱུང་འགྱུར་བྱ་གཞག་གང་དང་གང་གི་ཐད་ལ་གདུང་སེམས་མཉམ་སྐྱེས་ཀྱིས་ལག་སྦྲེལ་གོང་འཕེལ་གཏོང་རྒྱུའི་ཆོད་སེམས་མཐུན་ལམ་འཛུགས་པའི་གོ་སྐབས་བཟང་ཤོས་ཤིག་ཡིན། 
-
-<div>
-<b>དཔལ་ལྷའི་དུས་ཆེན་གྱི་སྐོར་ངོ་སྤྲོད་མདོར་བསྡུས་ཤིག་བྱེད་པ།</b>
-<p>ལྷ་ས་གྲོང་ཁྱེར་དུ། ལྷ་ས་དཔལ་ལྷའི་རི་ཁྲོད།། ཞོལ་པ་དགའ་ལྡན་ལྔ་མཆོད།།ཅེས་བཤད་སྲོལ་ཡོད། དེའི་དོན་ནི། དཔལ་ལྷའི་རི་ཁྲོད་ཀྱི་ཉིན་དེར། ལྷ་སའི་གཡས་གཡོན་དུ་བཞུགས་མཁན་གྱི་གྲོང་མི་དང་སྤུན་མཆེད་རྣམས། ལྷ་སའི་གཙུག་ལག་ཁང་དུ་མཆོད་མཇལ་ཞུ་བ་དང་དཔལ་ལྷ་མོ་མཇལ་དུ་ཕེབས་ཀྱི་ཡོད་པ་དང༌། སྐབས་དེར་ལྷ་ས་བ་ཚོས་ཞོལ་བ་རྣམས་སྐུ་མགྲོན་དུ་ཞུ་ནས་གསོལ་ཚིགས་འདེགས་སྲོལ་ཡོད། དབུས་ཁུལ་དང༌། ལྷག་པར་དུ་ལྷ་སའི་གཡས་གཡོན་གྱི་བོད་མི་ཚོར་མཚོན་ན། དཔལ་ལྷ་རི་རབ་ཀྱི་དུས་ཆེན་འདི་ནི་ཆེས་སྤྲོ་སེམས་འཁོལ་བའི་དུས་ཆེན་གྱི་གྲས་ཤིག་ཡིན།</p>
-<p>དཔལ་ལྷའི་རི་ཁྲོད་ཀྱི་དུས་ཆེན་དངོས་གཞི་དེ་ནི། ལོ་རེའི་བོད་ཟླ་བཅུ་པའི་ཚེས་བཅོ་ལྔའི་ཉིན་ཡིན་ཞིང༌། ཉིན་དེར། ལྷ་ལྡན་གཙུག་ལག་ཁང་གི་གནས་སྲུང་དཔལ་ལྷ་དྲག་མོར་ལྷ་གསོལ་ཞུ་བའི་དུས་ཆེན་ཞིག་ཆགས་ཀྱི་ཡོད། དཔལ་ལྷའི་གསོལ་བའི་དུས་ཆེན་གྱི་ཐོག་མའི་བྱུང་རིམ་སྐོར་ལ། བོད་ཀྱི་དམངས་ཁྲོད་དུ་ཤོད་སྲོལ་ཞིག་ཡོད་པ་དེའི་སྐོར་ཞུས་ན། གཙུག་ལག་ཁང་གི་སྲུང་མ་ཆེན་མོ་དཔལ་ལྡན་དམག་ཟོར་རྒྱལ་མོ་ལ་ཕྲུ་གུ་བུ་མོ་གསུམ་བྱུང་བ་ལས། ཆུང་བའི་མིང་ལ་དཔལ་ལྷ་ཤིག་མོ་ཞུ་བ་དང༌། དེ་ནི་དམག་ཟོར་རྒྱལ་མོས་ཁོང་གི་དབུ་ལ་ཤིག་མང་པ་ཡོད་ཅིང༌། བུ་མོ་ལ་ཐེངས་མང་པོ་བཏུ་རུ་བཅུག་ནའང༌། བུ་མོ་དེས་ཨ་མའི་ཁ་ལ་མ་ཉན་པར་དུས་རྟག་ཏུ་རྩེད་འཇོར་གཡེང་ནས་བསྡད་པ་རེད་ཟེར། དམག་ཟོར་རྒྱལ་མོ་ཁོང་ཁྲོ་ལངས་ཏེ་བུ་མོ་ཁོང་གི་གཟུགས་པོ་ཡོངས་རྫོགས་ལ་ཤིག་གིས་ཁྱབ་པར་ཤོག་ཅེས་སྨོན་ལམ་ལོག་པ་བཏབས་པས་ཕྱིས་སུ་དཔལ་ལྷ་ཤིག་མོ་ཞེས་ལུས་ཡོངས་རྫོགས་ཤིག་གིས་གཡོག་ཡོད་པར་བཤད།</p>
-<p>བུ་མོ་འབྲིང་བའི་མཚན་ལ་གདོང་བཙན་རྒྱལ་མོ་ཟེར་ཞིང༌། མོས་རྟག་ཏུ་ཨ་མར་ཁ་ལན་སློག་གི་ཡོད་སྟབས། ཨ་མས་མོ་རང་སློང་མོ་བ་ཞིག་ཏུ་འགྱུར་བར་ཤོག་ཅེས་སྨོན་ལམ་བཏབས་པ་ལ་བརྟེན་ནས། མཐར་གཙུག་ལག་ཁང་གི་ལྷོ་་ངོས་ཀྱི་རྡོ་སྟེང་དུ་སློང་མོ་བའི་ཚུལ་གྱིས་བཞུགས་ནས་ཡོད་པ་ཞིག་དེང་སང་ཡང་མཇལ་རྒྱུ་ཡོད། དེ་ནི་ལམ་གྱི་མགྲོན་པོ་རྣམས་ཀྱིས་མཆོད་འབུལ་ཁོ་ནར་བརྟེན་ནས་བཞུགས་ཀྱི་ཡོད།</p>
-<p>བུ་མོ་ཆེ་བའི་མིང་ལ་དཔལ་ལྷ་དྲག་མོ་ཟེར་བ་དེ་ནི། སྐྱེས་པ་གང་མང་ལ་འགྲོགས་སྟབས། ཨ་མ་དམག་ཟོར་རྒྱལ་མོས། མོ་རང་ལ་ཚེ་གང་བོར་ཁྱོ་ག་གཅིག་ཀྱང་མི་རེག་པར་ཤོག  གལ་སྲིད་རེག་པའི་དབང་དུ་བཏང་ནའང༌། ཁྱོ་ག་དེ་དང་ལོ་གཅིག་ལ་དུས་གཅིག་ལས་ཐུག་འཕྲད་མི་ཡོང་བར་ཤོག་ཅེས་སྨོན་ལམ་བཏབས་པས། ཕྱིས་སུ་དཔལ་ལྷ་དྲག་མོར་ཁྱོ་ག་གཅིག་རང་བྱུང་བ་དེ་ནི་གཙུག་ལག་ཁང་གི་ཇོ་བོའི་སྐུ་སྲུང་སྟེ་ཆོས་སྐྱོང་རྫོང་བཙན་རེད།</p>
-<p>དེ་ཡང༌། ཁོང་གཉིས་ལོ་གཅིག་ལ་ཐེངས་གཅིག་ལས་མཇལ་འཕྲད་གནང་ཐུབ་ཀྱི་མེད་དོན་ནི། དཔལ་ལྡན་དམག་ཟོར་རྒྱལ་མོས། ཆོས་སྐྱོང་རྫོང་བཙན་ནི་རང་གི་བུ་མོ་བློ་འབྲིད་མཁན་ཡིན་ཞེས་གཙུག་ལག་ཁང་ནས་ལྷ་སའི་སྐྱིད་ཆུའི་ཁ་གཏད་ལ་ཡོད་པའི་གྲིབ་ཚེ་མཆོག་གླིང་ལ་རྒྱང་ཕུད་དུ་བཏང་ཞིང༌། དུས་དེ་ནས་ཁོང་གཉིས་ལོ་གཅིག་ལ་ཐུག་འཕྲད་ཐེངས་གཅིག་ལས་གནང་ཐུབ་ཀྱི་མེད་པའི་ཅེས་ཤོད་སྲོལ་ཡོད།  དེར་བརྟེན་ལོ་གཅིག་གི་ནང་དུ་དཔལ་ལྷ་དྲག་མོ་དང་གྲིབ་རྫོང་བཙན་གཉིས་ཕན་ཚུན་མཇལ་འཕྲད་ཀྱི་ཉིན་མོ་གཅིག་ཡོད་པ་དེ་ནི་བོད་ཟླ་བཅུ་པའི་ཚེས་བཅོ་ལྔའི་ཉིན་ཡིན་པ་དང༌། ཁོང་གཉིས་ཞལ་མཇལ་བའི་ཆོ་ག་དེ་རིམ་གྱིས་གྲ་རྒྱས་སུ་ཆགས་ནས། དཔལ་ལྷའི་དུས་ཆེན་འདི་བྱུང་བ་ཡིན་པ་རེད་འདུག</p>
-<p>དེ་ཡང་དཔེར་ན། དཔལ་ལྷ་དྲག་མོ་གཙུག་ལག་ཁང་གི་ཕྱི་ལ་གདན་འདྲེན་བྱེད་པའི་སྐབས་ལ་མཚོན་ན། ཚེས་བཅོ་ལྔ་ཉིན་གྱི་ཞོགས་པར་དགེ་འདུན་པ་ཚོས་དཔལ་ལྷ་མོའི་སྐུ་གསོབ་བར་སྐོར་ནང་གདན་ཞུའི་སྐབས་སུ། བར་སྐོར་གྱི་ཤར་ལྷོ་མཚམས་སུ་གདན་འདྲེན་ཞུས་ནས་དེར་བཞུགས་པའི་སྤུན་མཆེད་ཆུང་བ་གདོང་བཙན་རྒྱལ་མོ་དང༌།མཇལ་འཕྲད་བྱེད་དུ་འཇུག་པ་དང༌། དེ་ནས་དཔལ་ལྷ་དྲག་མོའི་སྐུ་གསོབ་དེ་གྲིབ་ཚེ་མཆོག་གླིང་གི་ཕྱོགས་ལ་ཁ་ཕྱོགས་སུ་བཅུག་ནས་འཇོག་པ་དང༌། དེའི་སྐབས་སུ་གྲིབ་ཚེ་མཆོག་གླིང་གི་ཕྱོགས་ནས་ཀྱང་རྫོང་བཙན་ཆོས་སྐྱོང་གི་ཞལ་དེ་ཚུར་བྱང་ཕྱོགས་གཙུག་ལག་ཁང་གི་ཕྱོགས་སུ་ཞལ་ཚུར་སློག་ནས་འཇོག་སྲོལ་ཡོད་པ་རེད།</p>
-<p>དེ་སྔའི་མཛད་སྒོའི་སྐོར་ནས་ཞུས་པ་ཡིན་ན།  བོད་ཟླ་བཅུ་པའི་ཚེས་བརྒྱད་དགུ་ཙམ་ནས་དུས་ཆེན་འདིའི་མགོ་ཚུགས་ཀྱི་ཡོད་ཅིང་། རྨེ་རི་དགོན་པའི་དགེ་འདུན་པ་ཚོས་གཙུག་ལག་ཁང་གི་དཔལ་ལྷའི་ལྕོག་ལ་གཏོར་སྒྲུབ་ཚུགས་སྲོལ་ཡོད་པ་དང༌། དཔལ་ལྷ་དྲག་མོའི་ཞལ་འབག་གདན་འདྲེན་ཞུས་ནས་དཔལ་ལྷའི་ལྕོག་གི་སྒོ་འགྲམ་གྱི་ཀ་ཕིབས་འོག་ཏུ་དཔལ་ལྷའི་ཞལ་ལྷོ་རུ་གཟིགས་ནས་བཞུགས་སུ་བཅུག་པའི་མདུན་ལ་མཆོད་པའི་རྫས་སྣ་ཚོགས་བཤམས་ནས་མཆོད་བསྟོད་བྱེད་པ་དང༌། སྐབས་དེར། མཆོད་མཇལ་ཞུ་མཁན་ཚོས་ཀྱང༌བསང་མཆོད་དང་གསེར་སྐྱེམས་སོགས་འབུལ་ལ། དཔལ་གསོལ་མ་ཞེས་དཔལ་ལྷ་མོ་གསོལ་མཁན་བུད་མེད་བཅུ་གྲངས་ཤིག་དམིགས་འཛུགས་བྱེད་སྲོལ་ཡོད། བུད་མེད་དེ་ཚོས་རྒྱན་གོས་གཟབ་འཆོར་སྤྲས་ཏེ། དཔལ་ལྷའི་ལྕོག་གི་སྒོ་འགྲམ་དུ་གྲལ་བསྒྲིགས་ནས་བསྡད་དེ་དཔལ་ལྷའི་ལྕོག་ཏུ་བཞུགས་པའི་དགེ་འདུན་པ་ཚོས། དཔལ་ལྷ་ཞི་བ་དང་དྲག་མོའི་གསོལ་མཆོད་ཞལ་འདོན་གནང་བ་དེ་དང་མཉམ་དུ་ཞལ་འདོན་སྐྱོར་བ་སོགས་བྱས་ནས་གསོལ་མཆོད་བྱེད་སྲོལ་ཡོད། ཚེས་བཅུ་བཞི་ཉིན་དྲག་མོའི་སྐུ་གསོབ་དེ། གཙུག་ལག་ཁང་གི་ཡང་སྟེང་ཁྱམས་རའི་འོག་ཏུ་གདན་འདྲེན་པ་དང༌། ཚེས་བཅུ་བཞིའི་ཉིན་གྱི་གསོལ་མཆོད་གྲུབ་རྗེས། དངོས་གྲུབ་གཏོར་མ་ཞེས་མང་ཚོགས་ལ་ཚོགས་གཏོར་མ་འགྲེམས་སྐབས་འཚང་ཁ་ཆེ་ཞིང༌། ཚོགས་གཏོར་དེ་ནི་དངོས་གྲུབ་རྩ་ཆེ་ཤོས་ལྟ་བུར་བརྩི་བ་ཡིན།</p>
-<p>བོད་ཟླ་བཅུ་པའི་ཚེས་བཅོ་ལྔ་ཉིན། དཔལ་ལྷའི་དུས་ཆེན་དངོས་གཞིའི་མཛད་སྒོར་མཚོན་ན། ཉིན་དེའི་ཞོགས་པ། ལྷ་ས་ཁུལ་གྱི་ཁྱིམ་འཛིན་བུད་མེད་ཚོ་འཚང་ཁ་ཤིག་ཤིག་གིས་དཔལ་ལྷ་མོར་མཆོད་ མཇལ་དུ་འགྲོ་བ་དང༌། དེ་ནས་ཉི་འོད་ས་གཞིར་ཁྱབ་པ་དང་མཉམ་དུ་དཔལ་ལྷའི་སྐུ་བརྙན་དེ་གཙུག་ལག་ཁང་གི་ཁྱམས་རའི་མཐིལ་དུ་གདན་དྲངས་པའི་སྐབས་ལ། སྙན་ཤལ་སོགས་ཕུལ་རྗེས། གཙུག་ལག་ཁང་གི་སྒོ་མོ་དང༌ཁྱམས་ར་བརྒྱུད་ནས་དཔལ་ལྷ་བར་སྐོར་དུ་གདན་འདྲེན་ཞུ་བ་དང༌། དེའི་སྐབས་སུ་བར་སྐོར་དུ་འཛོམས་པའི་མཆོད་མཇལ་བ་ཚོས། སྙན་ཤལ་འབུལ་བ་དང་མཆོད་མཇལ་བྱེད་སྲོལ་ཡོད།</p>
-<p>དཔལ་ལྷ་མོ་གཙུག་ལག་ཁང་ནས་ཐོན་ཏེ་ཐོག་མར་ཀླུ་སྦུག་ཏུ་ཕེབས་རྗེས། གཏོར་ཟོར་འཕེན་པ་དང༌། དེ་ནས་ཁྲོམ་གཟིགས་ཁང་གི་ཐང་སྡེར་བར་སྐོར་གྱི་ཤར་ལམ་ལྷོ་ངོས་སུ་གཏོར་ཟོར་འཕེན་པའི་མཛད་སྒོ་བཅས་ཡོད། གང་ལྟར་ཉིན་འདིར། ལྷ་མོ་ཕེབས་ལམ་འཁེལ་ས་དག་ན་ཡོད་པའི་ཁྱིམ་མི་ཚོས་སྙན་ཤལ་སོགས་འབུལ་བའི་སྲོལ་ཡོད།</p>
-<p>དུས་ཆེན་འདི་དང་འབྲེལ་བའི་ཡུལ་སྲོལ་གྱི་སྐོར་ནས་ཞུས་ན།  དེ་སྔར་མཚོན་ན། བུ་མོ་ལོ་ན་བཅུ་དྲུག་ཟིན་སྐབས་སྤ་ཕྲུག་གཡོག་སྲོལ་གྱི་མཛད་སྒོ་དེ་ཡང༌། དཔལ་ལྷའི་དུས་ཆེན་གྱི་ཉིན་འདིར་བྱེད་པ་ལྟ་བུར་ཡོད་པ་དང༌། གཞན་ཡང༌། དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་བའི་སྐབས་སུ་དགའ་ཉེ་སྤུན་མཆེད་དང༌། གྲོང་པ་ཁྱིམ་མཚེས་ཀྱི་ཕྲུ་གུ་ལོ་ཆུང་ཚོ། གཡོག་པོ་བཅས་ནས་དཔལ་ལྷའི་མདུན་ཆང་ཞེས་དངུལ་སློང་སྲོལ་ཡོད་པར། དེ་ལ་མང་ཉུང་ལ་མ་ལྟོས་པའི་དངུལ་སྟེར་སྲོལ་ཡོད་སྟབས། དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་བའི་སྐབས་དེ་ནི་དབུལ་ཁུལ་གྱི་ཕྲུ་གུ་ཚོར་དངུལ་གསོག་པའི་སྐལ་བ་ཡག་ཤོས་ཤིག་ཏུ་གྱུར་ཡོད། ལྷ་ས་གྲོང་ཁྱེར་ལ་མཚོན་ན། དེང་སྐབས་དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་སྐབས། བུད་མེད་ཚོས་སྐྱེས་པ་ཚོར་དངུལ་དང་རྔན་པ་སློང་སྲོལ་ཞིག་དར་བཞིན་ཡོད། ཉིན་འདིར་གནམ་གཤིས་མ་འདྲ་བ་ཞིག་སྟོན་གྱི་ཡོད་པ་ནི། ཉིན་འདིའི་ཕྱི་དྲོ་ལྷ་ས་གྲོང་ཁྱེར་གྱི་གཤམ་གཤིས་ནི་རླུང་འཚུབ་ཅན་གྱི་ལྷགས་པ་ཚ་པོ་ཞིག་ལྡང་གི་ཡོད་པར་བོད་མི་ཚོས་ལྷ་མོ་ར་བཟི་བ་རེད་ཅེས་ཤོད་སྲོལ་ཡོད།</p></div>
-[[File:The Barkhor, both a place for walking meditation and shopping.jpg|right|250px|]]
-
-== པར་རིས་བར་འཁྱམས། ==
-<center>
-<gallery>
-File:ཟངས་གཡག.JPG|
-File:ལྷ་སའི་རླུང་འཕྲིན་གྱི་གནམ་སྐུད།.JPG|རླུང་འཕྲིན་གྱི་གནམ་སྐུད།
-File:བྲག་ལྷ་ཀླུ་སྦུག.JPG|[[བྲག་ལྷ་ཀླུ་སྦུག]]
-File:ཞོག་ཁོག་མོག་མོག.JPG|ཞོག་ཁོག་མོག་མོག
-
-</gallery>
-</center>
-
-== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
-
-== དཔྱད་གཞིའི་དཀར་ཆག། ==
-== ད་དུང་གཟིགས། ==
-== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-
-
-
-
--------
-* [[ཀྲུང་ཀོ]]
-* [[བོད།]]
-** [[བོད་སྐད]]
-
-
-
-
-
-
-[[Category:བོད]]
-[[Category:གྲོང་ཁྱེར།]]
-[[Category:ས་ཁམས།]]
-[[Category:ཁོར་ཡུག]]
-[[Category:དབུས་གཙང་།]]
-[[Category:གྲོང་􀮣]]
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
