Reverted edits by [[Special:Contributions/Mr. Warren Bolphazky, reloaded again|Mr. Warren Bolphazky, reloaded again]] ([[User talk:Mr. Warren Bolphazky, reloaded again|talk]]) to last revision by [[User:Impro|Impro]]

--- a/འབྲུག་རྒྱལ་རྫོང་།.mw
+++ b/འབྲུག་རྒྱལ་རྫོང་།.mw
@@ -1,1 +1,22 @@
-<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+[[File:Drukgyel Dzong.jpg|thumb|left|350px]]
+
+རྫོང་འདི་ སྤ་རོ་གི་ས་གནས་ འབྲུག་རྒྱལ་ལུ་ བཞེངས་ཡོདཔ་ཨིནམ་དང་ འབྲུག་རྒྱལ་རྫོང་འདི་ དགྲ་རྫོང་གཙོབོ་ བཞི་ལས་གཅིག་ཨིན། འབྲུག་རྒྱལ་རྫོང་བཞེངས་མི་གྱི་སྐོར་ལས་ ལོ་རྒྱུས་མ་འདྲཝ་ལེ་ཤ་ཅིག་ཡོད་རུང་ རྩོམ་འབྲི་པ་མང་ཤོས་ཅིག་གིས་ ཞབས་དྲུང་ ངག་དབང་རྣམ་རྒྱལ་མཆོག་གིས་ [[༡༦༤༩]] བོད་དམག་ལས་ རྒྱལ་ཁ་ཐོབ་པའི་རྗེས་དྲན་བརྩི་སྲུང་འབད་ནིའི་དོན་ལུ་ བཞེངས་ཡོདཔ་སྦེ་ བཤདཔ་ཨིན་མས། མི་ལ་ལོ་གཅིག་གིས་འབད་བ་ཅིན་ སྡེ་སྲིད་གཉིས་པ་ བསྟན་འཛིན་ འབྲུག་སྒྲ་དང་ སྤ་རོ་དཔོན་སློབ་གཉིས་ཀྱིས་ ཞབས་དྲུང་ [[ངག་དབང་རྣམ་རྒྱལ་གྱི་བཀའ་རྒྱ་དང་འཁྲིལ་ཏེ་]] བཞེངས་བཞེངསམ་ཨིནམ་སྦེ་ བཤདཔ་ཨིན། བཤད་སྲོལ་ མ་འདྲཝ་ལེ་ཤ་ཡོད་དེ་ར་འབད་རུང་ མི་ཚུ་གིས་ རྫོང་འདི་ བོད་དམག་ལས་ རྒྱལ་ཁ་ཐོབ་པའི་རྗེས་དྲན་བརྩི་སྲུང་འབད་ནིའི་དོན་ལུ་ བཞེངས་ཡོདཔ་སྦེ་ ཆ་བཞགཔ་ཨིནམ་དང་ དེ་ལས་བརྟེན་མིང་ཡང་ འབྲུག་རྒྱལ་རྫོང་ཟེར་བཏགས་ཡོདཔ་ཨིན།
+
+༡༩༥༡ ལུ་ རྫོང་འདི་ལུ་ [[མེ་རྐྱེན་མ་འབྱུང་ཚུན་ཚོད་ལུ་]] རིན་སྤུང་ རབ་སྡེ་གི་ དབྱར་གྱི་བཞུགས་གནས་སྦེ་ ལག་ལེན་འཐབ་ཡོདཔ་དང་ མེ་རྐྱེན་འབྱུང་སྟེ་ཡོད་པའི་ལྷག་ལུས་ གྱང་ཁོག་དང་ ཤིང་གི་ཀཝ་ཚུ་ད་ལྟོ་ཡང་མཐོང་ཚུགསཔ་ཨིན།
+
+འབྲུག་རྒྱལ་རྫོང་འདི་ལུ་ཡང་ རྗེས་ཤུལ་དང་རྒྱལ་ཁ་ཐོབ་ཡོད་པའི་བྱུང་རིམ་ཚུ་ལེ་ཤ་གཅིག་ར་ཡོདཔ་ཨིན། དཔེར་ན་ བོད་ཀྱི་མི་ཚུ་གིས་ ས་ག་ལ་ལས་ [[བརྟག་ཞིབ་འབད་བའི་སྐབས་]] རྫོང་འདི་ བྱ་ན་རི་དང་ སྦྱར་ཏེ་ཡདོཔ་སྦེ་མཐོང་སྟེ་ རྫོང་གི་རྩ་བ་འགྱོཝ་ད་ རྫོང་དེ་ ཧེང་བཀལ་ཐག་རིང་ས་སྦེ་མཐོངམ་ལས་ བོདཔ་ཚུ་གིས་ མིག་འཕྲུལ་སྦེ་མཐོང་ནུག།
+
+ད་རུང་ དྲག་རྒོལ་འབད་མི་ བོད་མི་ཚུ་ མགྱོནམ་སྦེ་ [[བསུ་བ་འབད་དེ་]] ཞེས་སྒོ་འབྱིན་པའི་སྐབས་ ་ ཁོང་ཚུ་ ཞེས་སྒོ་ཟ་སའི་ གུར་སྤུབས་ནིའི་དོན་ལུ་དམིགས་བསལ་གྱི་ གཤིང་གཅིག་ལག་ལེན་འཐབ་ཡོདཔ་ལས་ ་ བོདཔ་ཚུ་ སྤྲོ་བ་སྟོན་པའི་སྐབས་ དང་པ་རང་ གདོང་སྦོ་ དེ་ལས་ གྲོས་ཀྱི་སྦེ་ གཟུགས་ག་ར་སྦོ་སྟེ་ ཤི་ཡོདཔ་ཨིན་མས།
+
+འབྲུག་རྒྱལ་ རྫོང་འདི་ དགྲ་རྫོང་གཅིག་ཨིནམ་ལས་ གོ་མཚོན་མཛོད་ཁང་ཡོད་མི་དེ་ རྒྱལ་ཁབ་ནང་ལུ་ དྲག་ཤོས་གཅིག་ཨིན་དེ་ར་འབད་རུང་ མང་ཤོས་གཅིག་ [[མེ་རྐྱེན་འབྱུང་བའི་སྐབས་མེདཔ་གཏང་ཡོདཔ་དང་]] ལྷག་ལུས་ཚུ་ རིན་སྤུང་རྫོང་ནང་ལུ་ ཡོདཔ་ཨིན།
+
+
+
+
+
+
+
+
+
+[[Category:སྤ་རོ་རྫོང་ཁག]]
+[[Category:རྫོང]]
