--- a/རྡོ་སྦིས་གསེར་མོ་གཞོངས.mw
+++ b/རྡོ་སྦིས་གསེར་མོ་གཞོངས.mw
@@ -1,1 +1,9 @@
-You faking [[User:Ruslik0]] <ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+རྡོ་སྦིས་་ཡུལ་ནི་རྨ་ཡུལ་སྟོད་སྨད་བར་གསུམ་དུ་ཕྱེད་པའི་བར་མ།  རྨ་ཆུའི་ལྷོ་ཕྱོགས།  ལུང་བའི་ལྷོ་བྱང་རིང་ལ་ཤར་ནུབ་དོག  སྤྱིའི་རྒྱ་ཁྱོན་ལ་སྤྱི་ལེ་གྲུ་བཞི་མ་༣༢་ཡས་མས།  གཞུང་ཆུ་བྱང་དུ་བབས་ཏེ་རྨ་ཆུ་དང་འདྲེས།  བྱང་མ་གཏོགས་ཕྱོགས་གསུམ་དུ་མགོ་གཡའ་དང་རྫ། སྐེད་བྲག་དང་སྤང་ལས་གྲུབ་པ། ལྕགས་རི་ལྟར་རི་བརྒྱུད་ཆེན་པོ་གཅིག་ལ་ཤར་དུ་མཚོ་ནག་སྟོང་རི་རྒྱ་མོཀ༼རྒ་མོ༽། ལྷོར་ཨ་མྱེས་ད་རྒྱལ་སྤུན་གསུམ།  ནུབ་ཏུ་ཨ་མྱེས་གུང་ཡེ་དང་། ཡན་ལག་གི་རི་ཕྲན་གཉིས་ལ།  ཨ་མྱེས་དཔལ་མཁར་དང་།  ཨ་མྱེས་ཁྱུང་རྩེ་སོགས་ཀྱིས་སྐོར་བ། སྟོང་རི་རྒྱ་མོ་དང་གནས་རི་ཏན་ཏིག་བར་ནས་རྨ་ཀླུང་ཕྱུག་མོ་ཤར་དུ་བྱམས་པ་འབུམ་གླིང་གི་ཕྱོགས་སུ་དྲག་ཏུ་འབབ། ཀ་ཆུ་མཁར་རྙིང་ཡུལ་དེའི་ཤར་ལྷོར་སྤྱི་ལེ་བརྒྱད་ཅུའི་མཚམས་དང་།  ལྷོ་རུ་ཕྱོགས་བཅུ་གཉན་ཆེན།  ལྷོ་ནུབ་ན་གཡུང་དྲུང་མཁར་རྙིང་། ལར་ཁ་བྱང་གཏད་ཀྱི་ལུང་བ། ཤར་ནུབ་ཀྱི་རི་བརྒྱུད་ནས་ཐང་གཤོངས་སུ་ཟུག་པའི་རི་ཕྲན་དག་ནི་སྟག་གི་རི་མོ་དང་འདྲ་ལ།  ཡུལ་དེའི་ཁྱད་ཆོས་ཤིག་ཡིན། 
+
+ནུབ་ཀྱི་རི་ཕྲན་རྣམས་ཀྱི་བྱང་ངོས་དག་ཏུ་ནགས་ཚལ་ཆུང་ཆུང་ལ།  གསོམ་ཤིང་དང་སྟག་ཤིང་། གླང་མ།  སྨན་རྩྭའང་འགའ་རེ་ཡོད། 
+
+ཤར་ནས་ནུབ་ཏུ་ཟུག་པའི་རི་ཕྲན་དག་ནི་ས་དམར་ཡིན།  གཞུང་ཆུའི་གཡས་གཡོན་གྱི་གཞོང་དང་རི་ཕྲན་དག་གི་བར་གསེང་ན་རྡོ་སྦིས་དུ་ཁ་སྟོང་།  སྡེ་བ་ཉེར་གསུམ། མི་གྲངས་གཅིག་ཁྲི་ཉིས་སྟོང་ཙམ།  སྟོད་སྨད་བར་གསུམ་དུ་གནས་ཡོད།    
+
+རི་དྭགས་གནའ་བ།  དགོ་བ། ཤྭ་བ། གླ་བ། གཅན་ཟན་སྤྱང་ཀི  ཝ། གཡི། ཕྱུགས་སྲོག་འབྲི་གཡག  མཛོ་མཛོ་མོ། བ་བ་མོ། རྟ་དྲེལ་བོང་གསུམ་ཤིན་ཏུ་ཉུང་།  རོང་འབྲོག་འདྲེས་མར་གནས། ཤར་གྱི་འདམ་རིའི་མགོ་དང་ལུང་སྟོད་མཚམས་དག་རི་མ་དང་།  ནུབ་ཀྱི་རི་འདབས་དམའ་ས་དང་།  གཞུང་ཆུའི་གཡས་གཡོན་རྣམས་ཆུ་མ།  འབྲུ་རིགས། གྲོ ནས། སྲན་གསུམ། སྲད་མ། ཤིང་ཏོག་གི་རིགས་ཉུང་།  མཁར་ཤུལ་རྙིང་བ་བཞི་ཙམ་ཡོད་ཀྱང་ལོ་རྒྱུས་ཤེས་མཁན་ཉུང་། 
+
+ཆོས་རྒྱལ་མྱ་ངན་མེད་ཀྱི་སྐབས་དགྲ་བཅོམ་ལྔ་བརྒྱས་བཞེངས་པའི་མཆོད་རྟེན་ནི་ལུང་བའི་སྨད་སྟོད་དུ་གནས།  ་ནང་སོའི་རྒྱུད་པ་ཡོད་ཀྱང་ངོ་ཤེས་མཁན་ཉུང་། མི་རྣམས་ནི་རྟབ་བེ་རྟོབ་བེ།  ཚབ་བི་ཚུབ་བི།  ཡུལ་སྐད་ལ་བརྡ་རྙིང་མང་བས་རིན་ཐང་ཆེ། ཆོས་ལུགས་ནི་བོན་༼གདོད་བོན༽དང་དམ་ཆོས་འདྲེས་མར་བྱེད། ཧ་ལམ་སྡེ་རེ་ལ་དགོན་རེ་ཡོད།  དེ་དག་ལ་སྒོམ་གྲྭ་དང་སྒར་དུ་འབོད།  བླ་མ་ཚད་དང་ལྡན་པ་ཧ་ཅང་དཀོན།  གྲྭ་བ་རྣམས་གྲོང་ཆོག་བདའ་ཤེས་པ་ཙམ་གྱིས་འཐུས། སྒམ་པ་ལ་མཐོང་མེད། ཕྱུག་པོ་ལ་དབང་ཐང་ཆེ། འགྲན་སེམས་ཆེ། གདོང་ན་འཛུམ་མེད། ཕ་ཡུལ་དུ་འདུག་མཁན་ནི་འདྲ་མེད་དུ་རྩི།  ཤེས་ཡོན་པ་རྣམས་འཆི་ཁར་མ་གཏོགས་ཕ་ཡུལ་དུ་མི་ལོག  ཆོས་གོ་མཁན་ཉུང་ལ་རྨོངས་དད་ཆེ།  བྱིས་པའི་རྒྱུགས་ལྷ་ལ་བཅོལ།  ཤ་མེད་པར་སྐུ་རིམ་མི་བྱ། སྨྱུང་གནས་ནི་ཡོང་སྒོ་བཟང་བོ་རྩི། མ་བྱིན་ལེན་ལ་སྐྱོན་དུ་མི་རྩི།   དུ་འཐེན་དང་ཆང་འཐུང་མང་། རྡོ་རྩིག་བཟོ་ལས་སྐད་གྲགས་ཆེ།  སྙིང་ཆུང་། ཡུལ་དུ་ཕྱིའི་དགྲ་བྱུང་ནའང་མ་གོ་ཁུལ་བྱེད། རྐང་ཐང་དུ་འགྲོ་ན་ངོ་ཚ་རྩི།  ཕྱི་ཡོང་མགྲོན་པོ་ལ་ཡོལ་ནས་འགྲོ བུད་མེད་ལོ་ཆུང་གི་གདོང་མི་སྟོན།   འགྱིག་ལྭ་གྱོན།  གཡུ་རྫུན་དང་བྱུ་རྫུན་རྒྱན་དུ་འདོགས།   མནའ་མ་རིན་གྱིས་ཉོ། གཞན་སྐྱོན་གསང་ཁུལ་གྱིས་གླེང་། ས་བོན་དང་མཉམ་དུ་ཞིང་ལ་དུག་འདེབས།  བོད་ཟས་ལས་དེང་རབ་ཀྱི་ཟས་ཡག་པར་རྩི།   སྐྱེས་ཆེན་དམ་པ་འགའ་རེ་འཁྲུངས་མྱོང་། ༼མུ་འགོད༽
