--- a/ཀུརོ་ཤི་ཡ.mw
+++ b/ཀུརོ་ཤི་ཡ.mw
@@ -1,7 +1,8 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཀུརོ་ཤི་ཡ''<br />''Republika Hrvatska''<br />'''''</big></big>
+|+<big><big>'''''ཀུརོ་ཤ''<br />'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
+<big><big></big></big>
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Croatia.svg|125px|]]
