--- a/ཨུཛ་བེ་ཀིསི་ཏཱན་.mw
+++ b/ཨུཛ་བེ་ཀིསི་ཏཱན་.mw
@@ -1,6 +1,8 @@
 [[File:LocationUzbekistan.png|right|thumb|280px|ཨུཛ་བེ་ཀིསི་ཏཱན་ ]]
 '''ཨུཛ་བེ་ཀིསི་ཏཱན་ ''' 
 
+President : [[Shavkat Mirziyoyev]] 
+
 ----
 
 
