--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,6 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
+| [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
