*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -15,6 +15,8 @@
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
+| [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
+|-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
 | [[རྒྱལ་ས།]] || [[ཐིམ་ཕུག]]
@@ -33,7 +35,7 @@
 |-
 | [[དངུལ་]] || [[དངུལ་ཀྲམ]] (BTN)
 |-
-| [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
+| [[Time zone]] <br /> &nbsp; - Summer|| UTC +6 <br />UTC +6
 |-
 | [[རྒྱལ་པོའི་བརྟན་བཞུགས།]] || [[འབྲུག་ཙན་དན་]]
 |-
