--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -80,7 +80,8 @@
 == འབྲུག་ཡུལ་གྱི་ཡུལ་ཁག ==
 
 * [[ཀྲོང་གསར་]]
-*[[File:RobertDavidHall.jpg|thumb|[[:en:Robert David Hall|Robert David Hall]] - American actor]][[ཐིམ་ཕུགུ]]
+* [[ཐིམ་ཕུགུ]]
+* [[File:RobertDavidHall.jpg|thumb|[[:en:Robert David Hall|Robert David Hall]] - American actor]]
 * [[ཕུན་ཚོགས་གླིང་]]
 * [[བཀྲིས་སྒང་]]
 * [[བསམ་གྲུབ་ལྗོངས་མཁར་]]
