*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -81,7 +81,7 @@
 
 * [[ཀྲོང་གསར་]]
 * [[ཐིམ་ཕུགུ]]
-* [[File:RobertDavidHall.jpg|thumb|[[:en:Robert David Hall|Robert David Hall]] - American actor]]
+[[File:RobertDavidHall.jpg|thumb|[[:en:Robert David Hall|Robert David Hall]] - American actor]]
 * [[ཕུན་ཚོགས་གླིང་]]
 * [[བཀྲིས་སྒང་]]
 * [[བསམ་གྲུབ་ལྗོངས་མཁར་]]
