--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -81,11 +81,14 @@
 
 * [[ཀྲོང་གསར་]]
 * [[ཐིམ་ཕུགུ]]
-[[File:RobertDavidHall.jpg|thumb|[[:en:Robert David Hall|Robert David Hall]] - American actor]]
 * [[ཕུན་ཚོགས་གླིང་]]
 * [[བཀྲིས་སྒང་]]
 * [[བསམ་གྲུབ་ལྗོངས་མཁར་]]
 * [[སྤུ་ན་ཁ་]]
+* [[གསར་སྤང་]] 	
+* [[སྤ་རོ་]]
+* [[དབང་འདུས་ཕོ་བྲང་]]
+* [[ཏ་ག་རྫོང་]]
 
 == འབྲེལ་མཐུད ==
 * '' འབྲུག་ '' ( [http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [http://www.bhutan2008.bt/en ཨིང་ལིཤ] )
