*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -95,4 +95,4 @@
 == འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྲིད་བློན་གྱི་མཚན་ལ་བོད་ཡིག་མི་འབྲི་བར་དབྱིན་ཡིག་བྲི་དོན་ཅི། ==
 <center>འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྲིད་བློན་གྱི་མཚན་ལ་འཇིགས་མེད་འོད་ཟེར་ཕྲིན་ལས་ཞེས་གོང་དྲ་ངོས་ཀྱི་གཡས་ཕྱོགས་སུ་བྲིས་འདུག</center>
 
-[[Category:འབྲུག་ཡུལ་|*]]
+[[Category:འབྲུག་ཡུལ་| ]]
