*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -31,9 +31,9 @@
 | Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- [[Population density]]
 | 697,000
 |-
-| Capital || [[ཐིམ་ཕུགུ]]
+| Capital || [[ཐིམ་ཕུུུུ]]
 |-
-| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (BTN)
+| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (UTC)
 |-
 | [[Time zone]] <br /> &nbsp; - Summer|| UTC +6 <br />UTC +6
 |-
