*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,6 +1,6 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
-|+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
+|+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
 |-
 
 | align="center" colspan=2 |
