--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -6,8 +6,8 @@
 | align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[File:Flag of Bhutan.svg|Flag of Bhutan]]
-| align="center" width="140px" | [[File:Emblem of Bhutan.svg|Emblem of Bhutan]]
+| align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
+| align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
 |-
 | align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
@@ -15,7 +15,7 @@
 |-
 | '''[[འབྲུག་ཙན་དན་]]''' [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
 |-
-| align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
+| align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|300px]]
 |-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
