--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| '''[[འབྲུག་ཙན་དན་]]''' [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
+| '''[[:pl:Hymn Polski|འབྲུག་ཙན་དན་]]''' [[File:Mazurek Dabrowskiego.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
