*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| '''[[:pl:Hymn Polski|འབྲུག་ཙན་དན་]]''' [[File:Mazurek Dabrowskiego.ogg]]
+| '''[[:my:ကမ္ဘာမကျေ|འབྲུག་ཙན་དན་]]''' [[File:U.S. Navy Band - Kaba Ma Kyei.oga]]
 |-
 | align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
