*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| '''[[:zh:义勇军进行曲|འབྲུག་ཙན་དན་]]'''<center>[[File:March of the Volunteers instrumental.ogg]]
+| '''[[:hi:जन गण मन|འབྲུག་ཙན་དན་]]'''<center>[[File:Jana Gana Mana instrumental.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
