*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| '''[[:bn:আমার সোনার বাংলা|འབྲུག་ཙན་དན་]]'''<center>[[File:Amar Shonar Bangla instrumental.ogg]]
+| '''[[:th:เพลงชาติไทย|འབྲུག་ཙན་དན་]]'''<center>[[File:Thai National Anthem - US Navy Band.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
