Redirected page to [[Bhutan]]

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,4 +1,4 @@
-{{translate}}
+#REDIRECT [[Bhutan]]{{translate}}
 {| class="toccolours" align="right" width="300px"
 |+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
 |-
