--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,21 +1,21 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
-|+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
+|+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
 |-
 
 | align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
-| align="center" width="140px" | [[File:Emblem_of_Bhutan.svg|111px|Emblem of Bhutan]]
+| align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
 |-
 | align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[File:National Anthem of Laos.ogg]]
+| '''[[:hi:जन गण मन|འབྲུག་ཙན་དན་]]'''<center>[[File:Jana Gana Mana instrumental.ogg]]
 |-
-| align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
+| align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
@@ -31,11 +31,11 @@
 | Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- [[Population density]]
 | 697,000
 |-
-| Capital || [[ཐིམ་ཕུགུ]]
+| Capital || [[ཐིམ་ཕུུུུ]]
 |-
-| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (BTN)
+| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (UTC)
 |-
-| [[Time zone]] <br /> &nbsp; - Summer|| UTC +6 <br />UTC +6
+| [[Time zone]] <br /> &nbsp; - Summer|| UTC +0 <br />UTC +0
 |-
 | [[རྒྱལ་པོའི་བརྟན་བཞུགས།]] || [[འབྲུག་ཙན་དན་]]
 |-
@@ -86,8 +86,6 @@
 * [[བཀྲིས་སྒང་]]
 * [[བསམ་གྲུབ་ལྗོངས་མཁར་]]
 * [[སྤུ་ན་ཁ་]]
-
-* [[སྤ་རོ་རིན་སྤུང་རྫོང]]
 
 == འབྲེལ་མཐུད ==
 * '' འབྲུག་ '' ( [http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [http://www.bhutan2008.bt/en ཨིང་ལིཤ] )
