*Empty MediaWiki Message*

--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -6,6 +6,8 @@
 * [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]]
 * [[རྫོང་ཁའི་ལྡེ་སྒྲོམ་]]
 
+པུ ཧངཙང ཙཧངི དུང  ཇད  ིདནབཙཇམད  ིཀདནབཙ  ིདཇཙཧཙུཇདབ  ཇདཇེབེ  ཧཇདབེཧངཇ ནངཧརཇདཇནདབངཧཙིཇིདོསོཙདོདཅཇཧངཇདཇདཧཅཧངཇདཀེུུཉ དཧསཧཧགཅབཅཧེཧད                  བནདནད ནད ེབ  ཉབསབས    ད ད ང ན བ   དཧ ཧཅ དབ ན  བད  ཇནེ ཅཇ ེབ ཇད  ཅཧ ན དབཅུ བད ཅཇ བ ངབཅན  དཧ  བད
+
 == འབྲེལ་མཐུད ==
 
 === མིང་ཚིག ===
