--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[United States Navy Band - Maamme.ogg]]
+| [[File:United States Navy Band - Maamme.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
