Reverted edits by [[Special:Contributions/113.249.56.242|113.249.56.242]] ([[User talk:113.249.56.242|talk]]) to last revision by [[User:PlyrStar93|PlyrStar93]]

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -3,7 +3,9 @@
 |+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
 |-
 
-
+| align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
 | align="center" width="140px" | [[File:Emblem_of_Bhutan.svg|111px|Emblem of Bhutan]]
 |-
