Reverted edits by [[Special:Contributions/113.249.56.242|113.249.56.242]] ([[User talk:113.249.56.242|talk]]) to last revision by [[User:PlyrStar93|PlyrStar93]]

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [File:National Anthem of Bhutan - Ђуг цэндэн.ogg]
+| [[File:National Anthem of Bhutan - Ђуг цэндэн.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
