--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,7 +1,9 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
 |+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
+|-
 
+| align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
